Fix recent translation changes in docs and remove old word pages

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -198,7 +198,7 @@ plurality
   <p>zôtêstô&emsp;<em>sufficient/enough</em> <span>🙂</span></p>
   <p>êto&emsp;<em>many/much</em> <span>➕</span></p>
   <p>eswen&emsp;<em>more</em> <span>➕➕</span></p>
-  <p>otikon&emsp;<em>excess</em> <span>➕☹️</span></p>
+  <p>odigon&emsp;<em>excess</em> <span>➕☹️</span></p>
 </HisyeoTabs>
 :::
 
