--- a/docs/lessons/small-talk.mdx
+++ b/docs/lessons/small-talk.mdx
@@ -219,7 +219,7 @@ Here are some things you can say to show your condolences.
     <p>(noyo) (mût nîmû) (cûdo) kon zûtô yê zîlyoîs môî et noyo oxon kon nocîdo êto nîmû.&emsp;<em>My deepest sympathy at your great loss.</em></p>
     <p>kûu fisun fos noyo hofo oxon nîmû lôtfen.&emsp;<em>Please know that I am praying for you.</em></p>
     <p>(noyo) kôî wêko yôk cizî hoî êtsô nîmû.&emsp;<em>I cannot put myself in your situation.</em></p>
-    <p>(noyo) fisun fos li xoînbo û fos uyo li otikon kutin hoî îbûdû cônkôk.&emsp;<em>I know things seem too difficult right now.</em></p>
+    <p>(noyo) fisun fos li xoînbo û fos uyo li odigon kutin hoî îbûdû cônkôk.&emsp;<em>I know things seem too difficult right now.</em></p>
     <p>kûu dênêmêk xe ogolol xîwon.&emsp;<em>Try to hang on to hope.</em></p>
     <p>(mût noyo) kûu hobîyô hôn fos nîmû bît buswen xe kôto yodo kut umo fos li êo nonto ofek.&emsp;<em>Let me know if you need to talk or just someone to cry with.</em></p>
     <p>(noyo) fisun fos li xûnyu fos noyo kôî kôto oxon fos ôlê tônkô nîmû li êo fonmot.&emsp;<em>I know there is nothing I can say to make your pain go away.</em></p>
