--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -105,7 +105,7 @@ cardinal number).
 
 <HisyeoTabs>
   <p>niswî sûtûô li cok sûn zomo.&emsp;<em>"Three friends are leaving the group."</em></p>
-  <p>nûs buswen niswî dus tîû êfun oxon xe bîek ni sûwît ôfo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
+  <p>nûs buswen niswî dus tîû êfun oxon xe bîek ni sûît ôfo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
 </HisyeoTabs>
 
 Providing a quantity determiner of "one" (<HisyeoWord is='kut'/>) can be used as a kind of
@@ -125,8 +125,8 @@ modifiers) and it will represent a relative position of an item in a sequence
 The position of the ordinal does cause a split in the grouping of nouns.
 
 <HisyeoTabs>
-    <p>noyo côûfon mokon sûwît kut xôn onô.&emsp;<em>"You made the great first dessert."</em></p>
-    <p>noyo côûfon mokon sûwît xôn kut onô.&emsp;<em>"You made the first great dessert."</em></p>
+    <p>noyo côûfon mokon sûît kut xôn onô.&emsp;<em>"You made the great first dessert."</em></p>
+    <p>noyo côûfon mokon sûît xôn kut onô.&emsp;<em>"You made the first great dessert."</em></p>
 </HisyeoTabs>
 
 ### Multiplier
@@ -227,7 +227,7 @@ the quantity is an adequate amount for their purposes.
 
 <HisyeoTabs>
     <p>noyo bi ôhêl îskô sî zôtêstô îskô kîkôlô ûlzo hoî lono ôfo.&emsp;<em>"I've already had enough coffee today."</em></p>
-    <p>nîmû mokon sî otikon bîek sûwît hoî kôndodû onô.&emsp;<em>"You ate too much cake at the party."</em></p>
+    <p>nîmû mokon sî odigon bîek sûît hoî kôndodû onô.&emsp;<em>"You ate too much cake at the party."</em></p>
     <p>nîo moskûl li bûzôk môfî hôn xe hobîyô mût nîo wohî.&emsp;<em>"He lacks the courage to tell her."</em></p>
 </HisyeoTabs>
 
