--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -250,7 +250,7 @@ proper way to formulate the desired semantic meaning.
 5. ✅ To be used or treated in a stated way, or with a stated purpose.
 <HisyeoTabs>
   <p>ôfo li gongoxî ûlôgun nêôs oxon oûtô gîsgûl noyo.&emsp;<em>This is a new bell for my bicycle.</em></p>
-  <p>bîek sûwît onô oxon kôndodû yê ûsên dizêl yê umo Tomu ûn Helen.&emsp;<em>The cake is for Tom and Helen's anniversary.</em></p>
+  <p>bîek sûît onô oxon kôndodû yê ûsên dizêl yê umo Tomu ûn Helen.&emsp;<em>The cake is for Tom and Helen's anniversary.</em></p>
   <p>kûôxi ôfo hoî ôfo oxon xe mokon. dîzel oxon xe li êo fonmot.&emsp;<em>These apples here are for eating. The rest are for throwing away.</em></p>
 </HisyeoTabs>
 6. ✅ Supporting, in favour of. (Antonym: against)
@@ -360,7 +360,7 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 26. ✅ (nonstandard) So (that), in order to
 <HisyeoTabs>
-  <p>nîo gomî sî wokût kon wêloi xe gitno lono ûn bitûn, oxon fos nîo kôî dôstoc eswen wokût otikon.&emsp;<em>He took the swing shift for he could get more overtime.</em></p>
+  <p>nîo gomî sî wokût kon wêloi xe gitno lono ûn bitûn, oxon fos nîo kôî dôstoc eswen wokût odigon.&emsp;<em>He took the swing shift for he could get more overtime.</em></p>
 </HisyeoTabs>
 
 :::
@@ -894,7 +894,7 @@ phrase. "for", "worth" are an equivalent English expressions. The attached
 genitive phrase must contain concepts of money, value or amount.
 
 <HisyeoTabs>
-  <p>mokon sûwît yê dûî munî&emsp;<em>"candy for two dollars"</em> <small>(lit. sweet food of two monies)</small></p>
+  <p>mokon sûît yê dûî munî&emsp;<em>"candy for two dollars"</em> <small>(lit. sweet food of two monies)</small></p>
   <p>niswî kûdu yê dus yônê&emsp;<em>"three horses worth ten goats"</em> <small>(lit. three horses of ten goats)</small></p>
 </HisyeoTabs>
 
@@ -1176,7 +1176,7 @@ and <HisyeoWord is='foko'/> to make modifier-based abstract and agentive nouns.
 
 <HisyeoTabs>
     <p>foko lîûlê yê ênkômôn longi et kûyô&emsp;<em>"a sad clown"</em></p>
-    <p>kolowo kon xobo foko dês tônkô&emsp;<em>"non-violent martial arts"</em></p>
+    <p>kolowu kon xobo foko dês tônkô&emsp;<em>"non-violent martial arts"</em></p>
 </HisyeoTabs>
 
 ## Noun Clauses
