--- a/docs/reference/word_types/verbs.mdx
+++ b/docs/reference/word_types/verbs.mdx
@@ -81,7 +81,7 @@ frame the predicate of a question, it has the effect of asking for permission.
     <p>nîmû kôî kôto sî bi sêlôhô yê bôkbûn&emsp;<em>You might have warned me about the thunderstorm.</em></p>
     <p>noyo kôî li nô mût kôndodû onô lêkin noyo gôcîdon sî yôk bi ôhêl.&emsp;<em>I might go to the party, but I haven't decided yet.</em></p>
     <p>noyo kôî li gô hoî sityo kûldû lêkin noyo bi môcîbo fôlun fos wêîlun mût noyo misli umo wohî.&emsp;<em>I might be in a wheelchair, but I still want to be treated as a lady.</em></p>
-    <p>noyo kôî gomî bîek botuk sûwît fêlcîn.&emsp;<em>Might I take the last biscuit?</em></p>
+    <p>noyo kôî gomî bîek botuk sûît fêlcîn.&emsp;<em>Might I take the last biscuit?</em></p>
     <p>nûs kôî buswen fin xe li len eswen yoûtî cî.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
     <p>nîmû kôî tenkîn ulyô ko.&emsp;<em>Can you hear that?</em></p>
     <p>nîo kôî kôto tô hîskûnco Ingulic, Vulonsê, ûn Dôic.&emsp;<em>She can speak English, French, and German.</em></p>
@@ -96,7 +96,7 @@ explicitly described or implied.
 <HisyeoTabs>
     <p>hôn fos noyo bît li bîlûs hoî xe kôntêsto oxon yokûntîk, û noyo bît cûdo fun dûî munî mût kûngîyo yôûlî.&emsp;<em>If I won the lottery, I would give half the money to charity.</em></p>
     <p>noyo bît yûbik xe li nô monodo.&emsp;<em>I would love to come and visit.</em></p>
-    <p>kûu dêko bîek sûwît yê sobôlê xôn êto ze. noyo bît mokon môî ulyô bi mûlû ze.&emsp;<em>Look at that yummy cake! I would eat that all up!</em></p>
+    <p>kûu dêko bîek sûît yê sobôlê xôn êto ze. noyo bît mokon môî ulyô bi mûlû ze.&emsp;<em>Look at that yummy cake! I would eat that all up!</em></p>
     <p>noyo mût nîmû bît sôlû xe sityo bi koli.&emsp;<em>I would ask you all to sit down.</em></p>
     <p>noyo mût gonîso fos nîo li sî cok bi ilik.&emsp;<em>I would imagine that they have already left.</em></p>
     <p>hôn fos nîo li kôxentê yê mefûs û nîo bît bunyentoc sî xe besol zinkon onô.&emsp;<em>He's very security-conscious, so he would have remembered to lock the door.</em></p>
