--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -53,7 +53,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>ûsmon xîmu onô bi kônên ke dî fonmot.&emsp;<em>This mist will probably clear away.</em></p>
 <p>înbolî hosîn li nîôk hoî xokôn.&emsp;<em>Lovely flowers are growing everywhere.</em></p>
 <p>nûs kûu mokon bi dîlê eswen.&emsp;<em>We should eat more slowly.</em></p>
-<p>nîmû dî sî hoî ôfo bi hêlxun otikon.&emsp;<em>You have come too soon.</em></p>
+<p>nîmû dî sî hoî ôfo bi hêlxun odigon.&emsp;<em>You have come too soon.</em></p>
 <p>nîmû kûu cukto bi mûfêû eswen.&emsp;<em>You must write more neatly.</em></p>
 <p>hôn elentêt mûstokîn li totsi û niwos moxo cênbô kûzoû.&emsp;<em>Directly opposite stands a wonderful palace.</em></p>
 <p>zowo yê umo Henli nocîdo sî tîton nîo. &emsp;<em>Henry's dog is lost.</em></p>
@@ -93,7 +93,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>hoî wokût zik û monodo sûn sinsî cênbô ke li gîk.&emsp;<em>When will your guests from the city arrive?</em></p>
 <p>hoî fêlkonô yê gôyu onô yê xûto onô û tîton ni li sî infultîn bi cîes mût kilukû.&emsp;<em>Near the mouth of the river, its course turns sharply towards the East.</em></p>
 <p>gitno dûî tohilôk bûmî iwotê li tigoyo û fenûo sûbôl yê bûmî sêl.&emsp;<em>Between the two lofty mountains lay a fertile valley.</em></p>
-<p>gitno gos lîsîk lîun sî înbolî hûnsik iwotê.&emsp;<em>Among the wheat grew tall red poppies.</em></p>
+<p>gitno gos kûkmut lîun sî înbolî hûnsik iwotê.&emsp;<em>Among the wheat grew tall red poppies.</em></p>
 <p>ôlê zîzîyo len onô yê êto nomû onô li êo funlît sûn bûmî onô.&emsp;<em>The strong roots of the oak trees were torn from the ground.</em></p>
 <p>bînton lono onô bi sêl gitno tolên nomû dêko sî mênyûu onô xe kelo.&emsp;<em>The sun looked down through the branches upon the children at play.</em></p>
 <p>woyû fîtîkôs ûslêk sôbo ênkômôn misli kon okûlo sûtûô.&emsp;<em>The west wind blew across my face like a friendly caress.</em></p>
@@ -103,12 +103,12 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>kûôxi nomû zîngu ôfo yûnyoû êto môtowo yê îskô kûôxi.&emsp;<em>These oranges are juicy.</em></p>
 <p>xîmu xômûtlô li xôboî.&emsp;<em>Sea water is salty.</em></p>
 <p>tîton onô li mûlû yê umo.&emsp;<em>The streets are full of people.</em></p>
-<p>bôlfêlê sûwît sobôlê êo sûwît.&emsp;<em>Sugar tastes sweet.</em></p>
+<p>bôlfêlê sûît sobôlê êo sûît.&emsp;<em>Sugar tastes sweet.</em></p>
 <p>môtô onô oncêmon êo tût&emsp;<em>The fire feels hot.</em></p>
 <p>fos umo wohî xonluk cûtî oncêmon tôlkî, li xoînbo.&emsp;<em>The little girl seemed lonely.</em></p>
 <p>motûo moskûl yê umo moskûl xonluk cûtî bi kut fun li sî ônî tuluti xômûtlô.&emsp;<em>The little boy's father had once been a sailor.</em></p>
 <p>noyo nocîdo sî lîbû bolce nulun noyo.&emsp;<em>I have lost my blanket.</em></p>
-<p>tîmîok yê wikse cinôbu kôson sî niwos nîo hoî nomû onô yê kûôxi hûnsik sûwît.&emsp;<em>A robin has built his nest in the apple tree.</em></p>
+<p>tîmîok yê wikse cinôbu kôson sî niwos nîo hoî nomû onô yê kûôxi hûnsik sûît.&emsp;<em>A robin has built his nest in the apple tree.</em></p>
 <p>hoî mutyu lono û nûs mokon sî côûfon nûs hoî sôbo tîton.&emsp;<em>At noon we ate our lunch by the roadside.</em></p>
 <p>umo Zônsu kôs sî ônî wêtû oxon umo moskûl xonluk cûtî nîo.&emsp;<em>Mr. Jones made a knife for his little boy.</em></p>
 <p>êtsô yê ôîtun nîo li xoînbo yê xowosê êto.&emsp;<em>Their voices sound very happy.</em></p>
@@ -118,7 +118,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>nîmû ke lufono cukto ôfo oxon noyo ko.&emsp;<em>Will you send this message for me?</em></p>
 <p>nîmû bi môcîbo motsi noyo ko.&emsp;<em>Are you waiting for me?</em></p>
 <p>ôfo li lôzîc mocko kut yê zomo kon lôzîc ko.&emsp;<em>Is this the first kitten of the litter?</em></p>
-<p>foko mefûs wowoê ôfo li otikon cênbô hôn nîmû ko.&emsp;<em>Are these shoes too big for you?</em></p>
+<p>foko mefûs wowoê ôfo li odigon cênbô hôn nîmû ko.&emsp;<em>Are these shoes too big for you?</em></p>
 <p>bi zik li nulto û xûto.&emsp;<em>How wide is the River?</em></p>
 <p>kûu tenkîn.&emsp;<em>Listen.</em></p>
 <p>kûu sityo ôfo yê fêlkonô noyo.&emsp;<em>Sit here by me.</em></p>
@@ -146,17 +146,17 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>û tenkîn yê yôn in kontol dî bi oltû eswen bi oltû eswen.&emsp;<em>The sound of the drums grew louder and louder.</em></p>
 <p>nîmû sûko yogô ûsên tût yodo yogô ûsên cunyû bi xôn eswen ko.&emsp;<em>Do you like summer or winter better?</em></p>
 <p>umo moskûl xonluk ulyô ke cînlî wûôt kûzoû.&emsp;<em>That boy will have a wonderful trip.</em></p>
-<p>nîo côûfon lîsîk yê hûlû côt iwotê mût dumoko bînê sityo hoî ûnhilun yê môtô ûn mokon ni.&emsp;<em>They popped corn, and then sat around the fire and ate it.</em></p>
+<p>nîo côûfon kûkmut yê hûlû côt iwotê mût dumoko bînê sityo hoî ûnhilun yê môtô ûn mokon ni.&emsp;<em>They popped corn, and then sat around the fire and ate it.</em></p>
 <p>nîo li sî bîlûs hoî dûî kelo kut lêkin nocîdo ni fêlcîn.&emsp;<em>They won the first two games, but lost the last one.</em></p>
 <p>kûu gomî lîbû ôfo yê kôto fos cukto sî, kûu okôt mût motûo wohî nîmû bînê kûu motsi zuwobû.&emsp;<em>Take this note, carry it to your mother; and wait for an answer.</em></p>
 <p>noyo dî sî wîlî bi hêlxun ôntôn sî bi fîkî ûn li sî nô sêl mût côûfon kut.&emsp;<em>I awoke early, dressed hastily, and went down to breakfast.</em></p>
 <p>o. noyo doîcêl sî nîmû foxo.&emsp;<em>Aha! I have caught you!</em></p>
-<p>doî ôfo li otikon gosîl ze.&emsp;<em>This string is too short!</em></p>
+<p>doî ôfo li odigon gosîl ze.&emsp;<em>This string is too short!</em></p>
 <p>oiyo. woyû ûslêk sî ônî doknû wîk noyo bi mônbili.&emsp;<em>Oh, dear! the wind has blown my hat away!</em></p>
 <p>oiyo. û fisun nêôs ulyô li kûyô lôîcôk.&emsp;<em>Alas! that news is sad indeed!</em></p>
 <p>oiyo. woyû cunyû ulyô li êo bukû ôlê mêloc noyo foxo.&emsp;<em>Whew! that cold wind freezes my nose!</em></p>
 <p>nîmû li zôtêstô tût bi îbûdû ko.&emsp;<em>Are you warm enough now?</em></p>
-<p>nîo tenkîn sî gongoxî hoî otikon mûun.&emsp;<em>They heard the warning too late.</em></p>
+<p>nîo tenkîn sî gongoxî hoî odigon mûun.&emsp;<em>They heard the warning too late.</em></p>
 <p>nûs li umo môfî yûbik fenûo nûs.&emsp;<em>We are a brave people, and love our country.</em></p>
 <p>môî mênyûu li sî gîk lêkin mênyûu Meli.&emsp;<em>All the children came except Mary.</em></p>
 <p>umo Zek ogolol zûngô mûlû yê îbûwê cûtî lunsol ni mût zomo xîmu.&emsp;<em>Jack seized a handful of pebbles and threw them into the lake.</em></p>
@@ -170,13 +170,13 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>nûs monodo sî sinsî cûtî yê siskin moskûl yê motûo noyo et xe li sinsî cûtî yê cênbô môî en nucoto.&emsp;<em>We visited my uncle's village, the largest village in the world.</em></p>
 <p>nûs bêûdo fin nêôs hoî xokôn lono.&emsp;<em>We learn something new each day.</em></p>
 <p>socok gufuyo onô hoî tîû êfun yê hêlxun eswen hôn wêxôn ôfo.&emsp;<em>The market begins five minutes earlier this week.</em></p>
-<p>nîmû yosten sî otikon cênbô yê mônbili ko.&emsp;<em>Did you find the distance too great?</em></p>
+<p>nîmû yosten sî odigon cênbô yê mônbili ko.&emsp;<em>Did you find the distance too great?</em></p>
 <p>kûu li fîkî noî umo xonluk.&emsp;<em>Hurry, children.</em></p>
 <p>noî umo wohî xêntîl û noyo ke fûtsûn hûkun nîmû.&emsp;<em>Madam, I will obey your command.</em></p>
 <p>hoî ôfo xe li sêl yê nomû ôfo, û nîo mût monodo nîo li cûdo sî côûfon yê xôn êto.&emsp;<em>Here under this tree they gave their guests a splendid feast.</em></p>
 <p>hôn yogô ûsên cunyû û noyo dî wîlî hoî bitûn ôntôn tô kûon fûus sêlbô.&emsp;<em>In winter I get up at night, and dress by yellow candlelight.</em></p>
 <p>kûu kôto yogô fêlcîn yê kîso ulyô bi dîzel.&emsp;<em>Tell the last part of that story again.</em></p>
-<p>kûu li fîkî yodo û nîmû ke li otikon mûun.&emsp;<em>Be quick or you will be too late.</em></p>
+<p>kûu li fîkî yodo û nîmû ke li odigon mûun.&emsp;<em>Be quick or you will be too late.</em></p>
 <p>nîmû ke li nô ofek nûs ko yodo motsi hoî ôfo ko.&emsp;<em>Will you go with us or wait here?</em></p>
 <p>nîo bi môî wokût ôntôn fin yê êtsô lôc et fos bi sodolun ôlê ni li sî êo funlît hoî dînzoû, ûn hoî lono cunyû li yôk lohot.&emsp;<em>She was always, shabby, often ragged, and on cold days very uncomfortable.</em></p>
 <p>kûu gonîso bi kut bînê kûu tûu.&emsp;<em>Think first and then act.</em></p>
