Add more to wicked prince

--- a/docs/works/wicked-prince.mdx
+++ b/docs/works/wicked-prince.mdx
@@ -13,22 +13,49 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 ## kîso Woyû Sôltûstik Onô Ûn Bînton Lono Onô
 
+[The Wicked Prince by Hans Christian Andersen](https://andersen.sdu.dk/vaerk/register/info_e.html?vid=50)
+
 <HisyeoTabs>
-    <p>niwos hoî kut wokût ôhêl û mênyûu yê hondon kon bôklôn xe yûnyoû sî
-    lozîdô ûn dûuncît xe gôcîdon sî xe bi gûexo obûlû môî kûôcyo yê nucoto onô
-    ûn cihôû xe li êo ôsôlê ôlê umo onô, û nîo li êo kobût mûlû ôlê kûôcyo nîo
-    tô môtô ûn leknek kon wêtû kîldo ûn ônî oklumun nîo li êo botuk ôlê gos hoî
-    comen onô li êo kobût mûlû ôlê niwos yê umo onô tô môtô bînê û tolên môtô
-    ogolol woloko lûntî sûn tolên nomû ûn kûôxi onô li sî henondê bi ûlgûkîn
-    mûlû hoî nomû nêlô yê kon okûlo môtô et onô. êto motûo wohî bûzôk li sî cok
-    ofek lôzîc nungo nîo xe hoî obô nîo, hoî sôbo mônbili yê bêlêtê yê kon wôlik
-    môcîbo et yê niwos yê nîo wohî; lêkin bi ûtok hoî ulyô û ônî oklumun wêtodû
-    nîo wohî ûn hoî fos nîo li sî gîk hoî nîo wohî, nîo wohî li zôhûn oxon kon
-    xowosê nîecni nîo; yûkwoî nîecni bi kônên kôî tûu sî yôk uyo yê lôc eswen en
-    ônî oklumun ôfo foxo. mênyûu yê hondon kon bôklôn et onô yûnyoû gonîso fos
-    môî ôfo li dûndon ûn û ni li tîton bunxin fos uyo kûu cînlî. ûlzo nîo dî sî
-    eswen hoî xokôn lono, û somo nîo li sî êo ôsôlê ôlê môî ûn û bogô sûko
-    wêîlun nîo.</p>
+    <p>niwos hoî kut wokût ôhêl û mênyûu moskûl yê hondon kon bôklôn et nîecni
+    xe yûnyoû sî lozîdô ûn dûuncît xe gôcîdon sî xe bi gûexo obûlû môî kûôcyo yê
+    nucoto onô ûn cihôû xe li êo ôsôlê ôlê umo onô, û nîo moskûl li êo kobût
+    mûlû ôlê kûôcyo nîo tô môtô ûn leknek kon wêtû kîldo ûn ônî oklumun yê nîo
+    moskûl li êo botuk ôlê gos hoî comen onô li êo kobût mûlû ôlê niwos yê umo
+    onô tô môtô bînê û tolên môtô ogolol sî woloko lûntî sûn tolên nomû ûn kûôxi
+    onô li sî henondê bi ûlgûkîn mûlû hoî nomû nêlô yê kon okûlo môtô. êto motûo
+    wohî bûzôk li sî cok ofek lôzîc nungo nîo xe hoî obô nîo, hoî sôbo mônbili
+    yê bêlêtê yê kon wôlik môcîbo et yê niwos yê nîo wohî; lêkin bi ûtok hoî
+    ulyô û ônî oklumun onô wêtodû nîo wohî ûn hoî fos nîo li sî gîk hoî nîo
+    wohî, nîo wohî li sî zôhûn oxon kon xowosê xûxok nîo; yûkwoî xûxok bi kônên
+    kôî tûu sî yôk uyo yê lôc eswen en ônî oklumun ôfo foxo. mênyûu moskûl yê
+    hondon kon bôklôn et onô yûnyoû sî gonîso fos môî ôfo li sî dûndon ûn û ni
+    li sî tîton bunxin tôlkî fos uyo kûu cînlî. ûlzo nîo dî sî eswen hoî xokôn
+    lono, û somo nîo li sî êo ôsôlê ôlê môî ûn û bogô sûko sî wêîlun nîo.</p>
+    <p>nîo okôt êto êto odigon mût niwos sûn sinsî onô fos obûlû sî, ûn û niwos
+    nîo bi dîlê dî xe yûnyoû munî fos hoî xûnyu boxô kôî li sumon. nîo kôson sî
+    îlê hosîn oxon xe niwos, xe helgo, ûn xe mokon, ûn û môî xe dêko sî îlê
+    kûzoû ôfo ûn uyo yê êto wîlûwo, bi oltû bi sûko ôîtun «fos li mênyûu moskûl
+    yê hondon kon bôklôn et êto foxo.» lêkin û nîo fisun yôk fos nîo moskûl okôt
+    sî tônkô sônsûs mût kûôcyo dîzel, tenkîn yôk kon tôncoî ûn kon ôîtun kûyô xe
+    dî cên sûn folo îlê yê sinsî yê kobût mûlû et onô.</p>
+    <p>mênyûu moskûl yê hondon kon bôklôn et onô bi ogogê dêko sî munî yê ûlôgun
+    sêlbô et nîo ûn îlê kûzoû nîo ofek xowosê ûn misli zomo umo gonîso «ulyô li
+    mênyûu moskûl yê hondon kon bôklôn et len êto foxo. lêkin û noyo kûu yûnyoû
+    eswen — êto eswen. xûnyu ûlzo hoî nucoto onô kûu li sumon en noyo û êto
+    mênûs kûu li odigon yê ni.»</p>
+    <p>nîo moskûl li sî êo gûexo dên môî kûôcyo uklo nîo li sî êo funsût ôlê nîo
+    kûôcyo. ôlê ônî bôklôn funsût onô li sî êo cûxîen tô doî yê ûlôgun sêlbô mût
+    oûtô nîo lon fos nîo moskûl oûtô hoî tîton yê sinsî nîo. ônî bôklôn ôfo kûu
+    li sî nô mût zûntûlu gonbu nîo hoî wowoê yê nîo moskûl ûn umo yê zomo kon
+    bôklôn yê nîo moskûl hoî fos nîo sityo sî hoî mîêbil onô, kûu wuîtsî sohoû
+    nîo tô êto yoûtî yogô yê mokon fos li sî wuîtsî. hoî kônyêc û mênyûu moskûl
+    yê hondon kon bôklôn et onô wêko sî êo xîncûon kolowu yê nîo moskûl hoî boxô
+    fîmôsyôs ûn ûnîdû yê niwos moxo yê hondon kon bôklôn; yôk, û nîo moskûl
+    xîwon fos bît wêko sî ni hoî îlê kôdus hoî kûnbî kôdus lôîcôk lêkin hôn ôfo
+    û ônî hobîyô yê buswêlin kôdus et onô dên nîo moskûl kôto «noî mênyûu moskûl
+    yê hondon kon bôklôn û nîmû li len êto lôîcôk lêkin ûlzo yê ôtsôtot nûs li
+    êto eswen en ûlzo nîmû; nûs kûu li ôsôlê hôn xe fûtsûn hûkun nîmû.»</p>
+    
 </HisyeoTabs> 
 
 <HisyeoTooltip/>
