add separate author link

--- a/docs/works/wicked-prince.mdx
+++ b/docs/works/wicked-prince.mdx
@@ -13,7 +13,8 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 ## kîso Woyû Sôltûstik Onô Ûn Bînton Lono Onô
 
-[The Wicked Prince by Hans Christian Andersen](https://andersen.sdu.dk/vaerk/register/info_e.html?vid=50)
+[The Wicked Prince](https://andersen.sdu.dk/vaerk/register/info_e.html?vid=50) by [Hans Christian
+Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
 
 <HisyeoTabs>
     <p>niwos hoî kut wokût ôhêl û mênyûu moskûl yê hondon kon bôklôn et nîecni
