add more translation

--- a/docs/works/wicked-prince.mdx
+++ b/docs/works/wicked-prince.mdx
@@ -56,6 +56,26 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     û ônî hobîyô yê buswêlin kôdus et onô dên nîo moskûl kôto «noî mênyûu moskûl
     yê hondon kon bôklôn û nîmû li len êto lôîcôk lêkin ûlzo yê ôtsôtot nûs li
     êto eswen en ûlzo nîmû; nûs kûu li ôsôlê hôn xe fûtsûn hûkun nîmû.»</p>
+    <p>«bînê,» li fos mênyûu moskûl yê hondon kon bôklôn kôto sî. «û noyo ke li
+    bîlûs dên ôtsôtot nûs bi ûtok lôîcôk.» ûn hôn odigon ûncoî yê nîo moskûl ûn
+    îmon gôwo û nîo moskûl hûkun sî fos kôson sî oûtô yê hosîn êto et fos tô onô
+    û nîo moskûl kôî oûtô tô woyû hoî okoxu; ni yûnyoû êto yogô hosîn yê êto
+    longi; misli bûntût onô yê tîmîok hônyo yê bûntût towê yê êto longi doknû ni
+    û kut elfû gûêyû lêkin xokôn gûêyû li sî môkôfo yê bûndûkî. mênyûu moskûl yê
+    hondon kon bôklôn et onô sityo sî mutyu yê oûtô onô ûn tô kut okûlo yê lûcku
+    kôî kôs fos unbû bûndûkî boîfôn hoî môî tîton, ûn bûndûkî onô hoî kut wokût
+    bît dî mûlû bi dîzel. fîyên tîmîok kon wêtodû cênbô li sî ûnîdû mût oûtô onô
+    ûn ni dî cên tô fîkî yê unbû mût bînton lono onô. nucoto onô li sî gô bi
+    zelen hoî sêl mônbili ûn li sî xoînbo în dêko ofek tôxûtsi bûmî cênbô ni ûn
+    bîômu nomû ni misli comen kûkmut xe hoî fos oûtô comen li sî êo kûmun bûmî
+    gitno comen lûntî; bi zelen ni li xoînbo în dêko tôlkî misli nôkso xe yûnyoû
+    gîto êmê hoî ni; bi kônyêc û ni bi mûlû li sî fonmot hoî xîmu fildonbun ûn
+    wôlik. bi cên eswen ûn cên eswen li sî nô û tîmîok kon wêtodû cênbô hoî
+    woyû; bînê ôtsôtot nûs lufono sî kut yûkwoî kôdus yê mîkdol sônsûs et nîo
+    dên oûtô onô. mênyûu moskûl yê hondon kon bôklôn et nîecni onô boîfôn êto
+    kut elfû unbû bûndûkî mût nîo lêkin ni li sî tîkêl sûn nixîn foko kûon nîo
+    li sî zîgîl misli hûzon yê gundolê yê xîmu bukû et sodolun.</p>
+    
     
 </HisyeoTabs> 
 
