first complete draft of wicked prince

--- a/docs/works/wicked-prince.mdx
+++ b/docs/works/wicked-prince.mdx
@@ -74,9 +74,45 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     woyû; bînê ôtsôtot nûs lufono sî kut yûkwoî kôdus yê mîkdol sônsûs et nîo
     dên oûtô onô. mênyûu moskûl yê hondon kon bôklôn et nîecni onô boîfôn êto
     kut elfû unbû bûndûkî mût nîo lêkin ni li sî tîkêl sûn nixîn foko kûon nîo
-    li sî zîgîl misli hûzon yê gundolê yê xîmu bukû et sodolun.</p>
-    
-    
+    li sî zîgîl misli hûzon yê gundolê yê xîmu bukû et sodolun. kut folo yê
+    luhû, kut nonto ônî kut, li fos boîfôn ulyô û towê bîbôk yê nixîn yê yûkwoî
+    kôdus onô, li sî zîgîl mût oûtô onô fos mênyûu moskûl yê hondon kon bôklôn
+    et onô sityo sî, li sî êo môtô ôlê ni li sî bûgot mût ni misli êto elfû yê
+    fîyên bûgot xokôn, cîhun ni bi fîkî bi sêl mût nucoto nûs bi dîzel; nixîn
+    len yê tîmîok kon wêtodû cênbô li sî funsût, woyû onô ôîtun bi oltû ûnhilun
+    wîk yê mênyûu moskûl yê hondon kon bôklôn, ûn û wôlik fêlkonô onô (ôlê ni li
+    sî êo xîncûon û wôlik fos li gîk cên sûn sinsî môtô ko) dî sî xîncûon gonzîl
+    misli kistosê xe li êto êto mônbili xokôn, xe li sî êo gelmis ôlê îsîbô nîo
+    mût nîo moskûl dî sî cên misli îbûwê yê cênbô êto et fos sûn ulyô û yogô êto
+    et tulkolyun li nô bi fîkî mût sêl dî yûkwoî nixîn yê ônî boîfôn môtô.</p>
+    <p>mênyûu moskûl yê hondon kon bôklôn et onô li bomoge li fun dûî tîkû hoî
+    oûtô yê nîo moskûl bînê ni dûbono cizî bi kônyêc ofek cûndôl yê lôc êto mût
+    tolên yê nomû cênbô xe hoî bîômu nomû.</p>
+    <p>«noyo ke li êo funsût ôlê ôtsôtot nûs ze.» li fos mênyûu moskûl yê hondon
+    kon bôklôn et onô kôto sî. «noyo bêmon sî ni; û fôlun noyo kûu li mûlû
+    ze.»</p>
+    <p>ûn û nîo moskûl lon xêtî ûsên kôson oûtô kûzoû oxon xe oûtô hoî woyû, kôs
+    êo unbû sûn ûlôgun yê otôs môî et fos xe li êo kobût ôlê bêlêtê yê sêmoi tô.
+    nîo moskûl gomî ônî oklumun sûn môî kûôcyo lon êto fos hôn nîo li fos bît
+    wêko ulyô gitno xokôn dîzel, nîo doknû sî boxô onô yê yoûtî mônbili xokôn.
+    nîo li sî gîk hoî lîmîen yê oûtô onô ûn û mênyûu moskûl yê hondon kon bôklôn
+    et onô bi ôhêl li gîk mût ônî oklumun yê cizî nîo hoî fos ôtsôtot nîo lufono
+    zomo cênbô yê mûxî — kut zomo cênbô yê mûxî cûtî. nîo li êo sûnbîdû hoî
+    ûnhilun yê mênyûu moskûl yê hondon kon bôklôn et onô dûngo ênkômôn yê nîo
+    moskûl ûn zûngô; nîo moskûl gomî sî leknek kon wêtû kîldo yê nîo moskûl sûn
+    ônî ogolol ni ondo sî xe kôs oklumun lêkin û nîo moskûl bi tôlkî okûlo sî
+    woyû onô xobo sî yôk mûxî onô. bînê nîo moskûl hûkun sî fos foko yoldûn yê
+    nîo moskûl okôt ônî doknû yê êto wîlûwo doknû nîo moskûl tô ni oxon fos mûxî
+    onô cihôû îbûdû kôî yûnyoû yôk zîcoû onô oxon xe li gîk hoî nîo moskûl. foko
+    yoldûn onô fûtsûn hûkun yê nîo moskûl lêkin kut mûxî ônî kut wêko sî cizî ni
+    hoî lîmîen yê kut ônî doknû onô li sî nô bomoge homûs mût cîkînîl yê mênyûu
+    moskûl yê hondon kon bôklôn et onô dûngo sî nîo moskûl. boxô onô li tônkô
+    misli môtô ûn û nozî onô li sî gîk hoî luhû yê nîo moskûl. bi gonzîl yê
+    tônkô û nîo moskûl li sî fonmot ônî doknû onô ûn ôntôn yê nîo moskûl et ûtok
+    lunsol ni mût cok mônbili li sî cifulo bi hoôs hoî fôhon yê gûêyû onô yê ônî
+    oklumun yumon xe hoî îbûdû golun yôk nîo moskûl, mênyûu moskûl yê hondon kon
+    bôklôn et gonzîl onô xe xîwon sî xe li êo gûexo dên ôtsôtot nûs, li fos û
+    mûxî cûtî ônî kut obûlû sî.</p>
 </HisyeoTabs> 
 
 <HisyeoTooltip/>
