add some better clarity around sentences and prepositions

--- a/docs/reference/sentences.mdx
+++ b/docs/reference/sentences.mdx
@@ -50,52 +50,71 @@ The order with which you setup a clause or sentence is called [constituent
 order](https://en.wikipedia.org/wiki/Word_order#Constituent_word_orders).
 Sentences are made up of verb and noun phrases that exist within prepositional
 phrases. Let's ignore what prepositional phrases are available for the time
-being and just zoom out and think about subject phrases (with noun phrases
-within), action phrases (with verb phrases within), and thematic phrases (with
-noun phrases within). Many languages require that you order your sentence in a
-particular way such that each element along the way can be understood as a
-paritcular part of the sentence. Some of the most prevalent constituent orders
-that occur in natural languages include:
+being and just zoom out and think about **subject** phrases (with noun phrases
+within), **action** phrases (with verb phrases within), and **thematic** phrases
+(with noun phrases within). Many languages require that you order your sentence
+in a particular way such that each element along the way can be understood as a
+specific part of a sentence. Some of the most prevalent constituent orders that
+occur in natural languages include:
 [subject-object-verb](https://en.wikipedia.org/wiki/Subject%E2%80%93object%E2%80%93verb_word_order),
 [subject-verb-object](https://en.wikipedia.org/wiki/Subject%E2%80%93verb%E2%80%93object_word_order),
 [verb-second](https://en.wikipedia.org/wiki/V2_word_order), and
 [topic-comment](https://en.wikipedia.org/wiki/Topic_and_comment). In addition to
 these sentence structure types, there also exists some languages that have no
-strict word order. Instead they use morphological elements to identify the
-different parts of the sentence. In these languages, the order in which the
-parts of a sentence are provided may indicate the theme or theme of a sentence
-as well.
+strict word order. Instead they use morphological elements or particle words to
+identify the different parts of the sentence. In these languages, the order in
+which the parts of a sentence are provided may indicate the subject or theme of
+a sentence.
 
-Hîsyêô has a mostly free constituent order because all sentence parts are marked
-by a preposition. The order of your sentence puts the first provided element as
-the topic and each successive constituent as comments about the topic in order
-of importance. That said, there are three irregularities that reduce the freedom
-slightly. 
+Hîsyêô has a *mostly* free constituent order because all sentence parts are
+marked by a preposition. The order of your sentence puts the first provided
+element as the topic and each successive constituent as comments about the topic
+in order of importance. That said, there are three irregularities that reduce
+the freedom slightly. 
 
 #### Irregularity #1: First Constituent Agent Elision
 
-If the first constituent of a sentence is the agent, the marker (HisyeoWord is='û'/>) can
-be elided (skipped) and the noun phrase provided unmarked. Because of this
-elision rule, sentence structure does lean towards a preference of
+If the first constituent of a sentence is the agent, the preposition
+(<HisyeoWord is='û'/>) can be **elided** (skipped) and the noun phrase provided
+unmarked. However, if the agent's nucleus is a base verb, it must be preceded by
+the preposition so that it's clear that you are referring to the noun derivation of
+that verb.
+
+Because of this elision rule, sentence structure does lean towards a preference
+of
 [subject-verb-object](https://en.wikipedia.org/wiki/Subject%E2%80%93verb%E2%80%93object_word_order).
 
-If the agent's nucleus is a base verb, unfortunately, it must be preceded by the
-marker so that it's clear that you are referring to the noun derivation of that
-verb.
+---
 
 #### Irregularity #2: Verb-Object Syntactic Alignment
 
-Direct objects are always introduced by a verb. There is no way to provide a
-direct object before providing the verb. Additionally, you can't follow a verb
-immediately with another verb phrase (just like you can't immediately follow any
-other thematic relation by another thematic relation).
+Direct objects are **always** introduced by a free-standing
+[verb](./word_types/verbs.mdx). There is no way to provide a direct object
+*before* providing the verb. Additionally, you can't follow a verb immediately
+with another verb phrase (just like [you can't immediately follow any other
+preposition by another preposition](./word_types/nouns#roles)).
+
+This means that a sentence structure that mirrors the ENglish [passive
+voice](https://en.wikipedia.org/wiki/Passive_voice) is not strictly supported.
+However, there is a way to raise the object to the subject position by providing
+the object in the subject preposition phrase and supply the agent and verb in a
+subject complement subordinate clause.
+
+<HisyeoTabs>
+    <p>zowo hônyo côt cênbô tô hokôlî nîo ogolol noyo.&emsp;<em>A bear is biting me.</em></p>
+    <p>noyo li fos zowo hônyo côt cênbô tô hokôlî nîo ogolol.&emsp;<em>I am being bitten by a bear.</em></p>
+</HisyeoTabs>
+
+---
 
 #### Irregularity #3: Verb-Connector Syntactic Alignment
 
-If a verb is preceded by a connector, it is interpreted as the noun derivation.
-Only when followed by a thematic relation marker does the connector signify a
-new sentence. This means that there's some difficulty when expressing compound
-sentences that hinge on a change in verb but there are ways around it.
+If a verb is preceded by a [connector](./word_types/connectors.md), it is
+interpreted as the noun derivation. Only when followed by a preposition particle
+does the connector signify a new sentence.
+
+This means that there's some difficulty when expressing compound sentences that
+hinge on a change in verb but there are ways around it.
 
 <HisyeoTabs>
     <p>nîmû fôlun xe dênêmêk kon xobo yodo kon bôkôfoc ko.&emsp;<em>"Do you want to practice hitting or blocking?"</em></p>
