--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -205,10 +205,10 @@ each individual within a group.
     <p>môî umo xe hoî kûncên onô, dî sî totsi ûn hokûxi.&emsp;<em>Every person in the room stood and cheered.</em></p>
 </HisyeoTabs>
 
-:::info Interplay with location and duration thematic relations
+:::info Interplay with location and duration prepositions
 
-Using these with the location/time thematic relation (<HisyeoWord is='hoî'/>) and
-the distance/duration thematic relation (<HisyeoWord is='lon'/>) has subtle
+Using these with the location/time preposition (<HisyeoWord is='hoî'/>) and
+the distance/duration preposition (<HisyeoWord is='lon'/>) has subtle
 differences in interpretations.
 
 <HisyeoTabs>
