--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -20,10 +20,15 @@ innate the quality is.
 
 ## Roles
 
+Each noun phrase within a sentence is preceded by a particle word called a
+**preposition**. A preposition cannot be immediately followed by another
+preposition. If a preposition is immediately after a
+[connector](./connectors.md), it indicates a new sentence fragment.
+
 ### Causer / Voluntary Subject
 
 The <HisyeoWord is='û'/> particle precedes this noun phrase. If this is the
-first noun phrase of a sentence, the particle can be elided (omitted).
+first noun phrase of a sentence, the particle can be elided (skipped).
 
 During causative sentences, a NP with this role represents the *causer*. During
 non-causative sentences, a NP with this role will be the **agent** or
@@ -1257,7 +1262,7 @@ object of the English sentence is now the subject of the inner noun clause.
 
 ### Thematic Noun Clauses
 
-When you use a subordinate clause as the nucleus of a thematic relation phrase,
+When you use a subordinate clause as the nucleus of a preposition phrase,
 it often takes on a special meaning due to the combination of a thematic role
 and the non-concrete nature of subordinate clauses. Here's a list of the
 different interpretations:
@@ -1278,12 +1283,12 @@ description of the **direct object** as a relative clause.
 :::caution Why the shift in meaning
 
 It might seem like this should just describe the manner since that's what this
-thematic relation is for. But, it isn't used for that in this case because the
+preposition is for. But, it isn't used for that in this case because the
 primary sentence structure is already the place where all simultaneous
 predicates exist. That is to say, if you are describing the *action* by further
 utilizing another verb (and you are thinking about using a subordinate clause),
 you can place this verb as another predicate within the main sentence body
-instead of using a thematic relation marker. This frees up this marker (when
+instead of using a preposition particle. This frees up this marker (when
 supplied with a subordinate clause) to be used for describing the direct object.
 Syntactically, this is the only valid preposition that can take a relative
 clause. Given that this marker is the only one that applies the supplied noun
@@ -1306,7 +1311,7 @@ clause.
 When the location/time thematic role is applied to a *noun clause*, it has a
 special interpretation because there's no valid situation where a location or a
 time could be a full predicate. Just like the other thematic roles, the usage of
-this thematic relation with a subordinate clause is still meant to be
+this preposition with a subordinate clause is still meant to be
 semantically relevant. Thus, the meaning is taken as an **iterative condition**
 which in English can be interepreted as a clause prefaced by "whenever".
 
@@ -1315,7 +1320,7 @@ which in English can be interepreted as a clause prefaced by "whenever".
 When the direction/destination thematic role is applied to a *noun clause*, it
 has a special interpretation because there's no valid situation where a
 direction or a destination could be a full predicate. Just like the other
-thematic roles, the usage of this thematic relation with a subordinate clause is
+thematic roles, the usage of this preposition with a subordinate clause is
 still meant to be semantically relevant. Thus, the meaning is taken as a
 **terminative condition** which in English can be interepreted as a clause
 prefaced by "until".
@@ -1325,7 +1330,7 @@ prefaced by "until".
 When the source/origin thematic role is applied to a *noun clause*, it has a
 special interpretation because there's no valid situation where a source or an
 origin could be a full predicate. Just like the other thematic roles, the usage
-of this thematic relation with a subordinate clause is still meant to be
+of this preposition with a subordinate clause is still meant to be
 semantically relevant. Thus, the meaning is taken as a **inchoative condition**
 which in English can be interepreted as a clause prefaced by "since".
 
@@ -1371,7 +1376,7 @@ where a evidence could be described using a subordinate clause.
 When the distance/duration thematic role is applied to a *noun clause*, it has a
 special interpretation because there's no valid situation where a distance or a
 duration could be a full predicate. Just like the other thematic roles, the
-usage of this thematic relation with a subordinate clause is still meant to be
+usage of this preposition with a subordinate clause is still meant to be
 semantically relevant. Thus, the meaning is taken as a **continuative
 condition** which in English can be interepreted as a clause prefaced by "while"
 or "during".
@@ -1385,7 +1390,7 @@ where a intermediate could be described using a subordinate clause.
 #### Similative: Comparative Condition Subordinate Clause
 
 When the similative thematic role is applied to a *noun clause*, they do
-reflect normal subordinate clauses but since this thematic relation fits the
+reflect normal subordinate clauses but since this preposition fits the
 special similative class, there's a special way to intepret its usage
 wth noun clauses. The meaning is taken as a **comparative condition** which in
 English can be interepreted as a clause prefaced by "as if".
